--- a/azure-pipelines-code-scanning.yml
+++ b/azure-pipelines-code-scanning.yml
@@ -11,17 +11,6 @@ variables:
 
 steps:
 - script: |
-    # Generate the GitHub host URL
-    GITHUB_HOST="https://`echo $(Build.Repository.Uri) | cut -d'/' -f3`"
-    echo "##vso[task.setvariable variable=GitHubHost;]$GITHUB_HOST"
-    # Generate Repo name in Org/Repo format and assign it to GitHubRepo
-    GITHUB_ORG="`echo $(Build.Repository.Uri) | cut -d'/' -f4`"
-    GITHUB_REPO_NAME="`echo $(Build.Repository.Uri) | cut -d'/' -f5| sed -e 's/\\.git//g'`"
-    GITHUB_REPO=$GITHUB_ORG/$GITHUB_REPO_NAME
-    echo "##vso[task.setvariable variable=GitHubRepo;]$GITHUB_REPO"
-  displayName: 'Initialise the necessary variables for Code Scanning'
-  
-- script: |
    # Download the CodeQL Linux Runner
    wget https://github.com/github/codeql-action/releases/download/codeql-bundle-20210319/codeql-runner-linux
    mv codeql-runner-linux ../
@@ -29,27 +18,26 @@ steps:
   displayName: 'Get latest CodeQL package. Install on Agent.'
 
 - script: |
+   GITHUB_HOST="https://`echo $(Build.Repository.Uri) | cut -d'/' -f3`"
    # Run CodeQL Initialization
    ../codeql-runner-linux init \
-    --repository $(GitHubRepo) \
-    --github-url $(GitHubHost) \
+    --repository $(Build.Repository.Name) \
+    --github-url $GITHUB_HOST \
     --github-auth $(GITHUB_PAT) \
     --temp-dir ../codeql-runner
   displayName: 'Initialize CodeQL Executable and create a CodeQL database'  
 
 - script: |
-   echo "===================Variables Debug======================"
-   echo "Commit ID is $(Build.SourceVersion)"
-   echo "Ref is $(Build.SourceBranch)"
-   echo "======================Exporting Envt variables======================"
-   . ../codeql-runner/codeql-runner/codeql-env.sh
-   echo "======================Building the Project======================"
-   ../codeql-runner-linux autobuild --temp-dir ../codeql-runner
+   GITHUB_HOST="https://`echo $(Build.Repository.Uri) | cut -d'/' -f3`" 
+   #echo "======================Exporting Envt variables======================"
+   #. ../codeql-runner/codeql-runner/codeql-env.sh
+   #echo "======================Building the Project======================"
+   #../codeql-runner-linux autobuild --temp-dir ../codeql-runner
    # Run your custom build commands instead if autobuild fails
    echo "======================Run CodeQL Analyze======================" 
    ../codeql-runner-linux analyze \
-      --repository $(GitHubRepo) \
-      --github-url  $(GitHubHost) \
+      --repository $(Build.Repository.Name) \
+      --github-url  $GITHUB_HOST \
       --github-auth $(GITHUB_PAT) \
       --commit $(Build.SourceVersion) \
       --ref $(Build.SourceBranch) \
